[ALL] - fixed spacing issues on tablet

--- a/packages/navigate-theme/src/styles/components/_featured.scss
+++ b/packages/navigate-theme/src/styles/components/_featured.scss
@@ -196,10 +196,6 @@
     &--yg {
       background: $color-yg-blue;
     }
-    //TODO: remove
-    &-ms {
-      background: $color-med-blue;
-    }
 
     &__heading {
       color: white;
