--- a/packages/navigate-theme/src/styles/pages/_home.scss
+++ b/packages/navigate-theme/src/styles/pages/_home.scss
@@ -153,8 +153,8 @@
       @include respond(tablet) {
         width: 34.3rem;
       }
-      &:nth-child(1),
-      &:nth-child(3) {
+      &:nth-child(0),
+      &:nth-child(2) {
         @include respond(tablet) {
           margin-right: 1.3rem;
         }
